# xymon

./: CREDITS  Changes  Makefile.am  RELEASENOTES  configure  configure.ac  configure.client  configure.server
.github/workflows/: install-deps.sh  tests.yml
client/: Makefile.am  clientupdate.c  freebsd-meminfo.c  hpux-meminfo.c  logfetch.c  mq.sh  msgcache.c  netbsd-meminfo.c  openbsd-meminfo.c  orcaxymon.c  runclient.sh  xymonclient-aix.sh  xymonclient-darwin.sh  xymonclient-freebsd.sh  xymonclient-hp-ux.sh  xymonclient-irix.sh  xymonclient-linux.sh  xymonclient-netbsd.sh  xymonclient-openbsd.sh  xymonclient-osf1.sh  xymonclient-sco_sv.sh  xymonclient-sunos.sh  xymonclient.sh
common/: clientlaunch.cfg.5  clientupdate.1  logfetch.1  msgcache.8  orcaxymon.1  tasks.cfg.5  xymon-xmh.5  xymon.1  xymon.7  xymon.c  xymoncfg.1  xymoncfg.c  xymonclient.cfg.5  xymoncmd.1  xymoncmd.c  xymondigest.1  xymondigest.c  xymongrep.1  xymongrep.c  xymonlaunch.8  xymonlaunch.c  xymonserver.cfg.5
debian/: changelog
demotool/: demotool.c
docs/manpages/man1/: ackinfo.cgi.1.html  acknowledge.cgi.1.html  appfeed.cgi.1.html  clientupdate.1.html  combostatus.1.html  confreport.cgi.1.html  criticaleditor.cgi.1.html  criticalview.cgi.1.html  csvinfo.cgi.1.html  datepage.cgi.1.html  eventlog.cgi.1.html  findhost.cgi.1.html  ghostlist.cgi.1.html  history.cgi.1.html  hostgraphs.cgi.1.html  logfetch.1.html  orcaxymon.1.html  report.cgi.1.html  reportlog.cgi.1.html  showgraph.cgi.1.html  snapshot.cgi.1.html  statusreport.cgi.1.html  svcstatus.cgi.1.html  xymon.1.html  xymoncfg.1.html  xymoncmd.1.html  xymondigest.1.html  xymongen.1.html  xymongrep.1.html  xymonnet-again.sh.1.html  xymonnet.1.html  xymonpage.cgi.1.html  xymonping.1.html
docs/manpages/man5/: alerts.cfg.5.html  analysis.cfg.5.html  cgioptions.cfg.5.html  client-local.cfg.5.html  clientlaunch.cfg.5.html  combo.cfg.5.html  critical.cfg.5.html  graphs.cfg.5.html  hosts.cfg.5.html  protocols.cfg.5.html  tasks.cfg.5.html  xymon-xmh.5.html  xymonclient.cfg.5.html  xymonserver.cfg.5.html  xymonweb.5.html  xymonwebaccess.5.html
docs/manpages/man7/: xymon.7.html
docs/manpages/man8/: enadis.cgi.8.html  msgcache.8.html  trimhistory.8.html  xymon-mailack.8.html  xymoncgimsg.cgi.8.html  xymond.8.html  xymond_alert.8.html  xymond_capture.8.html  xymond_channel.8.html  xymond_client.8.html  xymond_distribute.8.html  (+8 more)
include/: version.h
lib/: Makefile.am  acklog.c  acknowledgementslog.c  availability.c  availability.h  calc.c  cgi.c  cgiurls.c  clientlocal.c  color.c  crondate.c  digest.c  encoding.c  environ.c  errormsg.c  eventlog.c  files.c  headfoot.c  holidays.c  htmllog.c  ipaccess.c  links.c  loadalerts.c  loadcriticalconf.c  loadhosts.c  loadhosts_file.c  loadhosts_net.c  locator.c  matching.c  memory.c  misc.c  msort.c  netservices.c  notifylog.c  readmib.c  reportlog.c  rmd160c.c  run.c  sendmsg.c  sha1.c  (+16 more)
tmp/: xymon_4.3.30-1.debian.tar.xz
tmp/debian/: README.Debian  README.encryption  big_conffile_renaming.TODO  changelog  clean  control  gbp.conf  init-common.sh  kfreebsd.cfg  rules  watch  xymon-client.NEWS  xymon-client.config  xymon-client.default.template  xymon-client.docs  xymon-client.init  xymon-client.install  xymon-client.lintian-overrides  xymon-client.logrotate  xymon-client.maintscript  xymon-client.postinst  xymon-client.postrm  xymon-client.preinst  xymon-client.prerm  xymon-client.templates  xymon.NEWS  xymon.apache2  xymon.config  xymon.dirs  xymon.docs  xymon.examples  xymon.init  xymon.install  xymon.lintian-overrides  xymon.maintscript  xymon.postinst  xymon.postrm  xymon.preinst  xymon.prerm  xymon.templates
web/: ackinfo.c  ackinfo.cgi.1  acknowledge.c  acknowledge.cgi.1  acknowledgements.c  appfeed.c  appfeed.cgi.1  boilerplate.c  cgioptions.cfg.5  cgiwrap.c  chpasswd.c  confreport.c  confreport.cgi.1  critical.cfg.5  criticaleditor.c  criticaleditor.cgi.1  criticalview.c  criticalview.cgi.1  csvinfo.c  csvinfo.cgi.1  datepage.c  datepage.cgi.1  enadis.c  enadis.cgi.8  eventlog.c  eventlog.cgi.1  findhost.c  findhost.cgi.1  ghostlist.c  ghostlist.cgi.1  graphs.cfg.5  history.c  history.cgi.1  hostgraphs.c  hostgraphs.cgi.1  hostlist.c  notifications.c  perfdata.c  report.c  report.cgi.1  (+16 more)
xymond/: alerts.cfg.5  analysis.cfg.5  client-local.cfg.5  client_config.c  combo.cfg.5  combostatus.1  combostatus.c  convertnk.c  do_alert.c  do_rrd.c  rrdcachectl.c  trimhistory.8  trimhistory.c  xymon-mailack.8  xymon-mailack.c  xymond.8  xymond.c  xymond_alert.8  xymond_alert.c  xymond_capture.8  xymond_capture.c  xymond_channel.8  xymond_channel.c  xymond_client.8  xymond_client.c  xymond_distribute.8  xymond_distribute.c  xymond_filestore.8  xymond_filestore.c  xymond_history.8  xymond_history.c  xymond_hostdata.8  xymond_hostdata.c  xymond_locator.c  xymond_rootlogin.pl  xymond_rrd.8  xymond_rrd.c  xymond_sample.8  xymond_sample.c  xymond_worker.c  (+3 more)
xymond/client/: aix.c  bbwin.c  darwin.c  freebsd.c  generic.c  hpux.c  irix.c  linux.c  mqcollect.c  netbsd.c  openbsd.c  osf.c  powershell.c  sco_sv.c  snmpcollect.c  solaris.c  zos.c  zvm.c  zvse.c
xymond/etcfiles/: xymon-apache-secure.DIST
xymond/rrd/: do_apache.c  do_asid.c  do_beastat.c  do_cics.c  do_citrix.c  do_counts.c  do_dbcheck.c  do_devmon.c  do_disk.c  do_external.c  do_fd_lib.c  do_filesizes.c  do_getvis.c  do_ifmib.c  do_ifstat.c  do_iishealth.c  do_iostat.c  do_la.c  do_mailq.c  do_mdc.c  do_memory.c  do_ncv.c  do_net.c  do_netapp.c  do_netstat.c  do_ntpstat.c  do_paging.c  do_sendmail.c  do_snmpmib.c  do_temperature.c  do_trends.c  do_vmstat.c  do_xymond.c  do_xymongen.c  do_xymonnet.c  do_xymonproxy.c
xymongen/: debug.c  loaddata.c  loadlayout.c  pagegen.c  process.c  rssgen.c  util.c  wmlgen.c  xymongen.1  xymongen.c
xymonnet/: beastat.c  contest.c  dns.c  dns2.c  httpcookies.c  httpresult.c  httptest.c  httptest.h  ldaptest.c  protocols.cfg  protocols.cfg.5  xymon-snmpcollect.c  xymonnet-again.sh.1  xymonnet.1  xymonnet.c  xymonnet.h  xymonping.1  xymonping.c
xymonproxy/: xymoncgimsg.c  xymoncgimsg.cgi.8  xymonproxy.8  xymonproxy.c
(+37 files in other folders)
